; ModuleID = '/home/carl/AnghaBench/zstd/lib/compress/extr_zstdmt_compress.c_ZSTDMT_flushStream.c'
source_filename = "/home/carl/AnghaBench/zstd/lib/compress/extr_zstdmt_compress.c_ZSTDMT_flushStream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__*, i64 }
%struct.TYPE_5__ = type { i32* }

@.str = private unnamed_addr constant [19 x i8] c"ZSTDMT_flushStream\00", align 1
@ZSTD_e_flush = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ZSTDMT_flushStream(%struct.TYPE_6__* %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = call i32 @DEBUGLOG(i32 5, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %21

11:                                               ; preds = %2
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32*, i32** %5, align 8
  %20 = call i64 @ZSTD_flushStream(i32 %18, i32* %19)
  store i64 %20, i64* %3, align 8
  br label %26

21:                                               ; preds = %2
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %23 = load i32*, i32** %5, align 8
  %24 = load i32, i32* @ZSTD_e_flush, align 4
  %25 = call i64 @ZSTDMT_flushStream_internal(%struct.TYPE_6__* %22, i32* %23, i32 %24)
  store i64 %25, i64* %3, align 8
  br label %26

26:                                               ; preds = %21, %11
  %27 = load i64, i64* %3, align 8
  ret i64 %27
}

declare dso_local i32 @DEBUGLOG(i32, i8*) #1

declare dso_local i64 @ZSTD_flushStream(i32, i32*) #1

declare dso_local i64 @ZSTDMT_flushStream_internal(%struct.TYPE_6__*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
